# etude

./: .dockerignore  .gitignore  AGENTS.md  README.md  VISUAL_DESIGN.md  WORLDS.md  pyproject.toml
.lf/: config.yaml
deploy/: README.md  etude-dns.py  etude-fly.sh
docs/: ARCHITECTURE.md  README.md  clean-machine-play.md  experience-proof.md  rules_coverage.yaml
etude/: README.md  __init__.py  advice.py  advice_identity.py  authored_match_parity.py  authored_match_receipt.py  curated_pack.py  enums.py  experience_protocol.py  live_advice.py  presentation.py  public_commitment_parity.py  replay_index.py  semantic_boundary.py  server.py  study_branch.py  study_index.py  study_protocol.py  study_runtime.py  testing_house_protocol.py  trace.py  villain.py
experiments/: README.md  exp-00-cost-basis.md  exp-00-decision-profile.md  exp-00c-seat-balanced-baselines.md  exp-01-c1-training.md  exp-02-flat-mc.md  exp-03-distillation.md  exp-04-potential-shaping.md  exp-06-newworld-training.md  exp-07-expert-iteration.md  exp-08-two-deck-matchup.md  exp-08b-ancestral-dose.md  exp-09-control-competency.md  exp-10-value-gate.md  exp-11-curriculum-exploitability.md  first-light-run-1.md  int-11-semantic-runtime-policy.md  int-12-belief-strategy-advisor.md  (+29 more)
managym/: Cargo.toml  README.md  __init__.pyi  decision.py  possible_worlds.py
managym/examples/: export_canonical_replay.rs  export_experience_protocol.rs  export_study_index.rs  export_study_protocol.rs  export_study_recorded_decisions.rs  measure_content_pack.rs
managym/src/: benchmark.rs  canonical_replay.rs  conformance.rs  decision.rs  experience.rs  lib.rs  possible_worlds.rs  search_state.rs  study.rs
managym/src/agent/: action.rs  env.rs  mod.rs  observation.rs  observation_encoder.rs  rollout_pool.rs  structured_offer.rs  vector_env.rs
managym/src/cardsets/: alpha.rs  ice_age.rs  mod.rs  strixhaven.rs  tla.rs  visions.rs
managym/src/flow/: action.rs  combat.rs  combat_actions.rs  damage.rs  decision.rs  event.rs  event_log.rs  game.rs  identity.rs  mana.rs  mod.rs  play.rs  priority.rs  proposed_event.rs  resolution.rs  sba.rs  scenario.rs  search.rs  setup.rs  stabilization.rs  statics.rs  tick.rs  trigger.rs  triggers.rs  turn.rs  undo.rs  zones.rs
managym/src/python/: bindings.rs  vector_env_bindings.rs
managym/src/semantic/: content.rs  mod.rs
managym/src/state/: ability.rs  card.rs  game_object.rs  hash.rs  mana.rs  mod.rs  permanent.rs  player.rs  predicate.rs  stack_object.rs  target.rs  zone.rs
managym/tests/: authored_match_tests.rs  canonical_replay_tests.rs  conformance_tests.rs  content_pack_clone_allocations.rs  content_pack_tests.rs  engine_tests.rs  experience_protocol_tests.rs  match_state_hash_tests.rs  possible_worlds_tests.rs  scenario_tests.rs  search_state_contract.rs  search_tests.rs  semantic_conformance_tests.rs  semantic_interpreter_tests.rs  semantic_ir_tests.rs  study_index_protocol_tests.rs  study_protocol_tests.rs
managym/tests/fixtures/: scryfall_cards.json  structured_declare_attackers_offer.json  structured_priority_bolt_offer.json
managym/tests/rules/: cr_106_mana.rs  cr_400_identity.rs  cr_514_cleanup.rs  cr_603_triggers.rs  cr_614_replacement.rs  cr_702_keywords.rs  cr_704_sba.rs  event_observations.rs  helpers.rs  interaction_spells.rs  mod.rs  presentation_events.rs  stage2_cards.rs  stage3_cards.rs  structured_attacker_offers.rs  structured_offers.rs  tla_cards.rs
website/: .gitignore  .sesskey  Dockerfile  README.md  content.yaml  fly.toml  main.py  pyproject.toml
website/static/: style.css
website/tests/: test_site.py
(+719 files in other folders)
