[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manabot"
version = "0.1.0"
description = "The trainable Magic: The Gathering agent for Etude Fantasia"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gymnasium>=1.0.0",
    "pydantic>=2.10.0",
    "typer>=0.12.5",
    "wandb>=0.18.7",
    "psutil>=5.9.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.34.0"
]

[project.scripts]
manabot = "manabot.cli:main"

[project.optional-dependencies]
play = [
    "maturin>=1.5,<2.0",
]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
    "ruff>=0.9.0",
    "boto3>=1.35.0",
]
ops = [
    "boto3>=1.35.0",
    "pyyaml>=6.0",
]

[dependency-groups]
training-runtime = [
    "torch==2.10.0+cu128 ; sys_platform == 'linux'",
    "torch==2.10.0 ; sys_platform != 'linux'",
]
play-runtime = [
    "fastapi>=0.116.0",
    "maturin>=1.5,<2.0",
    "numpy>=1.24.0",
    "torch==2.10.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv]
default-groups = ["training-runtime"]
conflicts = [
    [
        { group = "training-runtime" },
        { group = "play-runtime" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-training"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "play-runtime" },
    { index = "pytorch-cuda", group = "training-runtime", marker = "sys_platform == 'linux'" },
    { index = "pytorch-training", group = "training-runtime", marker = "sys_platform != 'linux'" },
]

[tool.hatch.build.targets.wheel]
packages = ["manabot", "etude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running integration checks",
    "training: runs PPO training (minutes, not seconds)",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["etude", "manabot"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
