[package]
name = "managym"
version = "0.1.0"
edition = "2021"

# Agent worktrees build this crate once or twice, then disappear. Keep file and
# line debugging without retaining a full incremental compiler graph per clone.
[profile.dev]
debug = 1
incremental = false

[profile.test]
debug = 1
incremental = false

[lib]
name = "managym"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
blake3 = "1"
base64 = "0.22"
rand = "0.8"
rand_chacha = "0.3"
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
