[project]
name = "etude-website"
version = "0.1.0"
description = "Etude Fantasia landing site"
requires-python = ">=3.12"
dependencies = [
    "python-fasthtml>=0.6.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
